major refactor and add openapi specification 3 to document the api
When correcting a bookmark as admin use the new adminservice and not
abuse the PersonalService as until now

refactor - rename "shared" to "public" on bookmark

refactor - change "likes" to "likeCount" for number of likes on bookmark

fix - set "descriptionHtml" when "description" is present

clean api - hide field '__v' from api return

clean api - hide field 'lastAccessedAt' from api return

refactor - rename field 'githubURL' to 'sourceCodeURL'

remove unused attribute "category"

start editing swagger.yaml

refactor - return empty array instead of NOT_FOUND for missing location

move scrape endopoint to own router and start with openapi

document scrape endpoint in open-api

return empty list when looking in personal bookmarks by location

improve openapi documentation

allow search in personal bookmarks with special filters only

allow search in public bookmarks with special filters only

add examples to create bookmark and queryParam

add stack to error messages when in development

rename const to correspond the Error name

add create index operation to mongo init script

add error types to open api definition and do some corrections there

fix openapi and overwrite httpStatus for validation error

openapi - move userId and bookmarkId to schema/parameters section

openapi - add enum for queryParam

update error message by deletion

openapi - add batch delete operation to api docs

openapi - document suggested-tags method and add missing forbidden 403

openapi - add tags and version endpoint

openapi - add tags to the root enable to establish the order of showing

In swager-ui

openapi - add empty line
