# docs/openapi/swagger.yaml
@@ -1,18 +1,23 @@
----
-swagger: '2.0'
+openapi: 3.0.0
 info:
-  version: 1.0.0
-  title: Bookmarks.dev api
-  description: API supporting the bookmarks.dev website
+  version: 2.0.0
+  title: Bookmarks.dev API
+  description: API supporting the www.bookmarks.dev website
   contact:
     name: Adrian Matei
     email: ama@codingpedia.org
     url: http://www.adrianmatei.me
   license:
     name: MIT
-basePath: "/api"
+
+servers:
+  - url: https://www.bookmarks.dev/api
+    description: Main (production) server
+  - url: http://localhost:3000/api
+    description: Local server for development
+
 paths:
-  "/":
+  /:
     get:
       description: message with link to Swagger docs
       produces:
@@ -20,38 +25,38 @@ paths:
       responses:
         '200':
           description: message with link to Swagger docs
-  "/public/bookmarks":
+  /public/bookmarks:
     get:
-      description: returns all public (shared) bookmarks
+      description: returns public bookmarks. Depending on provided query params there are
+      different posibilities.
       produces:
         - application/json
+      parameters:
+        - in: query
+          name: q
+          schema:
+            type: string
+          required: false
+          description: query text to filter bookmarks
+        - in: query
+          name: limit
+          schema:
+            type: number
+          required: false
+          description: limits the number of results to this value
+        - in: query
+          name: location
+          schema:
+            type: string
+          required: false
+          description: finds the public bookmark with this location
       responses:
         '200':
-          description: all public bookmarks
+          description: latest added public bookmarks
           schema:
             type: array
             items:
               "$ref": "#/definitions/bookmark"
-  "/secured/public/bookmarks/{bookmarkId}":
-    patch:
-      description: updates rating of bookmark (a user starred or unstarred the bookmark)
-      produces:
-        - application/json
-      responses:
-        '200':
-          description: OK when operation successful and updated bookmark in body
-          schema:
-            "$ref": "#/definitions/bookmark"
-        '404':
-          description: NOT_FOUND when bookmark cannot be found
-          schema:
-            "$ref": "#/definitions/myError"
-        '401':
-          description: unauthorized (you need to have a valid token) and the ratingUserId must be the same with the one in the request body
-        '500':
-          description: internal server error, when unknown server error is catched
-          schema:
-            "$ref": "#/definitions/myError"
   "/personal/users/{userId}/bookmarks":
     get:
       description: list of user's bookmarks
@@ -204,31 +209,41 @@ definitions:
     properties:
       _id:
         type: string
-      updatedAt:
-        type: string
-      createdAt:
-        type: string
-      description:
-        type: string
-      descriptionHtml:
-        type: string
-      language:
-        type: string
-      lastAccessedAt:
+      name:
         type: string
       location:
         type: string
-      name:
+      language:
         type: string
-      publishedOn:
-        type: string
-      shared:
-        type: boolean
       tags:
         type: array
         items:
           type: string
+      description:
+        type: string
+      descriptionHtml:
+        type: string
+      updatedAt:
+        type: string
+      createdAt:
+        type: string
+      lastAccessedAt:
+        type: string
+      publishedOn:
+        type: string
+      public:
+        type: boolean
       userId:
+        type: string
+      likeCount:
+        type: number
+      sourceCodeURL:
+        type: string
+      ownerVisitCount:
+        type: number
+      youtubeVideoId:
+        type: string
+      stackoverflowQuestionId:
         type: string
   myError:
     type: object
