# resources/db-migration/mongodb/1581486194960_rename-likes-to-likeCount-in-bookmark.js
@@ -1,0 +1,1 @@
+db.bookmarks.updateMany( {}, { $rename: { "likes": "likeCount" } } )
