# resources/db-migration/mongodb/1581498654838_set-descriptionHtml-if-not-present-DONE.js
@@ -1,0 +1,10 @@
+db.bookmarks.find().forEach(
+  function(e) {
+    if((!e.descriptionHtml || e.descriptionHtml.trim() === '') && e.description && e.description.trim() !== ''){
+      print(e.location);
+      print(e.description);
+      e.descriptionHtml = e.description;
+      db.bookmarks.save(e);
+    }
+  }
+);
